:lipstick: Fix spacing between components
Fix for unintended side-effect of 1e612681992b3918862e8e724d1ff1b56060e55c

--- a/src/scss/components/_form-control.scss
+++ b/src/scss/components/_form-control.scss
@@ -6,6 +6,7 @@
 
 .#{prefix(form-control)} {
   position: relative;
+  @include margin($properties: padding-top, $value-mobile: $typography-margin-list);
 
   @include modifier('hidden') {
     display: none;
